--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,36 +6,52 @@
 
 
 /* typefaces */
-@font-face {
-  font-family: 'Barlow Condensed';
-  font-style: normal;
-  font-weight: 400;
-  src: url(barlow_condensed.ttf) format('truetype');
-}
+// @font-face {
+//   font-family: 'Barlow Condensed';
+//   font-style: normal;
+//   font-weight: 400;
+//   src: url(barlow_condensed.ttf) format('truetype');
+// }
 
 @font-face {
-  font-family: 'Barlow';
-  font-style: normal;
-  font-weight: 400;
-  src: url(barlow.ttf) format('truetype');
+font-family: 'Century Gothic Regular';
+font-style: normal;
+font-weight: normal;
+src: local('Century Gothic Regular'), url('GOTHIC.woff') format('woff');
 }
 
 
 @font-face {
-  font-family: 'Barlow';
-  font-style: normal;
-  font-weight: 700;
-  src: url(barlow-bold.ttf) format('truetype');
+font-family: 'Century Gothic Italic';
+font-style: normal;
+font-weight: normal;
+src: local('Century Gothic Italic'), url('GOTHICI.woff') format('woff');
 }
 
-$sans-serif         : 'Barlow', sans-serif;
-$sans-serif-narrow  : 'Barlow Condensed', sans-serif;
+
+@font-face {
+font-family: 'Century Gothic Bold';
+font-style: normal;
+font-weight: normal;
+src: local('Century Gothic Bold'), url('GOTHICB.woff') format('woff');
+}
+
+
+@font-face {
+font-family: 'Century Gothic Bold Italic';
+font-style: normal;
+font-weight: normal;
+src: local('Century Gothic Bold Italic'), url('GOTHICBI.woff') format('woff');
+}
+
+$sans-serif         : 'Century Gothic Regular', sans-serif;
+// $sans-serif-narrow  : 'Barlow Condensed', sans-serif;
 
 $global-font-family : $sans-serif;
-$header-font-family : $sans-serif-narrow;
+$header-font-family : $sans-serif;
 
 tt, code, kbd, samp, pre {
-  font-family: 'Barlow Condensed', monospace;
+  font-family: 'Century Gothic Regular', normal;
   font-size: 0.6rem;
 }
 
