--- a/_jekyll/_includes/AILES/Posts-FR.html
+++ b/_jekyll/_includes/AILES/Posts-FR.html
@@ -38,13 +38,13 @@
     </h2>
 
     {% if post.read_time %}
-    <p class="page__meta">{{ post.date  | date: "%B %-d, %Y" }} &emsp;| &emsp; <i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
+    <p class="page__meta">{{ post.date  | date: "%d %-B, %G" }} &emsp; &emsp; <i class="" aria-hidden="true"></i></p>
     {% endif %}
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 400 }}</p>
     {% endif %}
 
-    <!-- <p><a href="{{ post.url | relative_url }}" class="align-right btn btn--primary">{{ site.data.ui-text[page.lang].more_label | default: "Read more" }}</a></p> 
- -->
+    
+
   </article>
 </div>
 {% endfor %}
