--- a/_jekyll/_includes/AILES/Posts-FR.html
+++ b/_jekyll/_includes/AILES/Posts-FR.html
@@ -51,7 +51,7 @@
 
 --- 
 
-<a href="{{ site.url }}/actualites/" class="btn btn--primary">Lire toutes les actualités</a>{: .notice--info}
+<a href="{{ relative_url }}/actualites/" class="btn btn--primary">Lire toutes les actualités</a>{: .notice--info}
 
 
 
