--- a/_jekyll/_includes/AILES/Posts-FR.html
+++ b/_jekyll/_includes/AILES/Posts-FR.html
@@ -38,7 +38,7 @@
     </h2>
 
     {% if post.read_time %}
-    <p class="page__meta">{{ post.date  | date: "%d %-B, %G" }} &emsp; &emsp; <i class="" aria-hidden="true"></i></p>
+    <p class="page__meta">{{ post.date  | date: "%Y-%m-%d" }} &emsp; &emsp; <i class="" aria-hidden="true"></i></p>
     {% endif %}
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 400 }}</p>
     {% endif %}
